# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
news/: models.py  serializer.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py
news_api/: settings.py  urls.py
